logs/zoauth.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ZOAuth-0.3.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zoauth'...
Compiling './lib/python3.5/site-packages/zoauth/net.py'...
***   File "./lib/python3.5/site-packages/zoauth/net.py", line 53
    except urllib2.HTTPError, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zoauth/support'...
Listing './lib/python3.5/site-packages/zoauth/support/django'...
Compiling './lib/python3.5/site-packages/zoauth/support/django/state.py'...
***   File "./lib/python3.5/site-packages/zoauth/support/django/state.py", line 37
    except urllib2.HTTPError, exc:
                            ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
